sre-simply-re-explained/tools/traefik-v2/data/echo.https.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kind-echo
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`echo.kind.io`)
      services:
      - name: kind-echo
        port: 1234
