sre-simply-re-explained/tools/traefik-v2/data/traefik.https.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`traefik.kind.io`) # 172.19.255.201
    services:
    - kind: TraefikService
      name: api@internal
